@@ -26,9 +26,9 @@
       <property name="spacing">10</property>
 
       <child>
-	<widget class="GtkLabel" id="label1">
+	<widget class="GtkLabel" id="label">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">DIscovering Channels...</property>
+	  <property name="label" translatable="yes">Discovering Channels...</property>
 	  <property name="use_underline">False</property>
 	  <property name="use_markup">False</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
